Membuat Java srip unutk even tambah data dan tombol hapus serta mengedit tombol hapus di css kemduai menambahakna filter fi html

--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
       </form>
       <!--  -->
 
+      <button id="hapus-semua">Hapus Semua</button>
+
+      <input type="text" id="filterText" placeholder="Filter..." />
+
       <!-- Membuat Tabel Untuk menampilkan Daftar Tugas -->
       <table id="tabel-tugas">
         <thead>
